--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
 URL = baseurl
+HTTPS = true
+PORT = 80
+SSL_CRT_FILE = ./bizinnovisiondev.co+5.pem 
+SSL_KEY_FILE = ./bizinnovisiondev.co+5-key.pem
+
+npx local-ssl-proxy \ --key bizinnovisiondev.co+5-key.pem \ --cert bizinnovisiondev.co+5.pem \ --source 80 \ --target 3000
